--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -388,10 +388,24 @@ button {
     padding: 0 15%;
 }
 
+/* #update-row-btn {
+    background-color: rgb(105, 101, 101);
+    color: white;
+    padding: 10px;
+    margin: 24px;
+    font-size: 20px;
+    letter-spacing: .5rem;
+    border-radius: 5px;
+    text-align: center;
+} */
+
 input[type='radio'] {
-    height: 15px;
-    width: 15px;
-    vertical-align: middle;
+    width: 15%;
+    height: 1.75em;
+  }
+
+  .answer {
+    font-size: 20px;
   }
 
 footer {
