--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -54,29 +54,29 @@ header #circle{
 }
 
 header .navbar ul{
-    display: flex!important;
-    align-items: center!important;
-    justify-content: center!important;
-    list-style: none!important;
-    padding: 1rem!important;
-    cursor: default!important;
-    flex-wrap:wrap!important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    padding: 1rem;
+    cursor: default;
+    flex-wrap:wrap;
 }
 
 header .navbar ul li{
-    margin:0 1.5rem!important;
-    justify-content:space-between!important;
+    margin:0 1.5rem;
+    justify-content:space-between;
 }
 
 header .navbar ul li a{
-    font-size: 1.75rem!important;
-    color:rgb(105, 101, 101)!important;
-    letter-spacing: .25rem!important;
+    font-size: 1.75rem;
+    color:rgb(105, 101, 101);
+    letter-spacing: .25rem;
 
 }
 
 header .navbar ul li a:hover{
-    border-bottom: 2px solid rgb(105, 101, 101)!important;
+    border-bottom: 2px solid rgb(105, 101, 101);
     
 }
 
